attempted fix of the jumbotron background image not performing as intended on mobile

--- a/client/src/sass/components/_jumbotron.scss
+++ b/client/src/sass/components/_jumbotron.scss
@@ -52,10 +52,10 @@
 }
 
 .jumbotron-image-full-size {
-  height: 100%;
+  height: 100vh;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto 100%;
   background-position: center;
 }
 
@@ -74,6 +74,10 @@
   .button-hover-background {
     min-height: $navigation-height-mobile-portrait;
     transform: translateY(-$navigation-height-mobile-portrait);
+  }
+
+  .jumbotron-image-full-size {
+    background-position: center center;    
   }
 
 }
